Version mobile des cards + correction taille bannière mobile

--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -1,4 +1,4 @@
-.banner {
+.bannerimg {
     border-radius: 25px;
     opacity: 0.7;
     object-fit: cover;
@@ -10,7 +10,6 @@
     background: black;
     border-radius: 25px;
     height: 223px;
-    max-width: 85%;
     margin-top: 66px;
 }
 
@@ -33,6 +32,7 @@
 @media screen and (min-width: 778px) and (max-width: 992px) {
     .banneroverlay {
         height: 160px;
+        max-width: 85%;
     }
 
     .banneroverlay p {
@@ -40,22 +40,25 @@
     }
 }
 
-@media screen and (max-width: 778px) {
+@media screen and (max-width: 777px) {
 
-    .banner {
+    .bannerimg {
         display: none;
     }
 
     .bannermobile {
-        display: block;
+        display: inline;
         border-radius: 10px;
         opacity: 0.7;
+        width: 100%;
+        height: 100%;
     }
 
     .banneroverlay {
         width: 335px;
         height: 111px;
         border-radius: 10px;
+        margin-top: 20px;
     }
 
     /* Overlay spécifique à la version mobile de la page à propos. */
@@ -75,3 +78,4 @@
         display: block;
     }
 }
+
